@@ -5,4 +5,5 @@ README
 bin/ermdir
 lib/File/EmptyDirs.pm
 t/0.t
+t/1-context-etc.t
 META.yml                                 Module meta-data (added by MakeMaker)
