@@ -1,45 +1,40 @@
 #!/usr/bin/perl
 use strict;
 use LEOCHARRE::CLI2; 
-use File::EmptyDirs 'remove_empty_dirs';
 use Cwd;
+use File::EmptyDirs 'remove_empty_dirs';
+use vars qw/$VERSION @DIRS/;
+$VERSION = sprintf "%d.%02d", q$Revision: 1.3 $ =~ /(\d+)/g;
 
-my @DIRS =
+
+@DIRS =
    grep {
       -d $_ or die("Argument '$_' is not a directory on disk.\n")
    } @ARGV;
 
-#@DIRS ||= (cwd());
-
-
-#(scalar @DIRS) or (push @DIRS, cwd());  
 @DIRS or ( push @DIRS, cwd() );
 
 
-#$opt_d and ( (warn "# dir arg: $_\n") for @DIRS );
 debug("dirs: @DIRS");
 
 for my $d (@DIRS) {
    -d $d or die("$d not a dir");
    my @removed = remove_empty_dirs($d);
-   if ($opt_d){
-      warn "# removed:\n";
-      (warn "# $_\n") for @removed;
-   }
+
+   $opt_d and ( map { warn "# removed: $_\n" } @removed );
+   
 }
 
 
 
 
 
-sub usage { qq{ermdir [OPTION].. PATH..
-Remove empty directories recursively.
+sub usage {q{ermdir [OPTION].. PATH..
+Remove empty directories recursively in PATH.
 
    -d          debug
    -h          help
    -v          version
-
-Where PATH is one or more directories on disk.
 
 Try 'man ermdir' for more info.
 }}
@@ -53,7 +48,7 @@ __END__
 
 =head1 NAME
 
-ermdir - Remove empty directories recursively.
+ermdir - Remove empty directories recursively in PATH.
 
 =head1 USAGE
 
@@ -75,7 +70,7 @@ Leo Charre leocharre at cpan dot org
 
 =head1 COPYRIGHT
 
-Copyright (c) 2009 Leo Charre. All rights reserved.
+Copyright (c) 2010 Leo Charre. All rights reserved.
 
 =head1 LICENSE
 
