@@ -1,3 +1,10 @@
+2010-01-21 09:41  cvs
+
+	* MANIFEST, Makefile.PL, README, bin/ermdir, lib/File/EmptyDirs.pm,
+	  t/0.t, t/1-context-etc.t: cleaned up code in module and ermdir
+	  cleaned up documentation cleaned up makefile and dependencies,
+	  removed Smart::Comments dep
+
 2009-09-17 17:27  cvs
 
 	* bin/ermdir, lib/File/EmptyDirs.pm: Cleaned up code in main
